--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<p> hi </p>
+<!DOCTYPE html>
+<head>
+    <link rel="icon" type="image/x-icon" href="/img/favicon-removebg-preview.png">
+<title>Eggcat: Home</title>
+<link rel="stylesheet" href="/style.css">
+</head>
+<body>
+
+
+
+
+
+
+
+
+
+
+    <p>hello</p>
+
+    <a href="jokeoftheday.html" class="button">Click me!</a>
+
+
+
+</body>
