--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <head>
+    <style>
+        body {
+    background-image: url("/img/Untitled.png");
+   }
+    </style>
     <link rel="icon" type="image/x-icon" href="/img/favicon-removebg-preview.png">
 <title>Eggcat: Home</title>
 <link rel="stylesheet" href="/css/style.css">
