Really important? dleovl fix

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<p>hi</p>
 <!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <style>
         body {
     background-image: url("/img/Untitled.png");
@@ -10,7 +13,7 @@
 <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-
+<p> hi but from dleovl</p>
 
 
 
@@ -22,8 +25,9 @@
 
     <p>hello</p>
 
-    <a href="jokeoftheday.html" class="button">Click me!</a>
-
+    <a href="jokeoftheday.html" class="button">Joke of the day</a>
+<button href="jokeoftheday.html">Joke of the day</button>
 
 
 </body>
+</html>
