--- a/jokeoftheday.html
+++ b/jokeoftheday.html
@@ -1,2 +1,16 @@
-<p>What do you call a cow with no legs? Disabled.</p>
+<p>Ever wondered how you do a space party? Yoy planet.</p>
+<h2>Counter #1 (tooltip on top)</h2>
+    <div id="counter1" class="counter counter1" data-tooltip="top">
+      <ul>
+        <li data-action="like">
+          <span class="icon"></span>
+          <span class="count">0</span>
+        </li>
+        <li data-action="dislike">
+          <span class="icon"></span>
+          <span class="count">0</span>
+        </li>
+      </ul>
+    </div>
+<p>#18 march 2024 @unknown: What do you call a cow with no legs? Disabled.</p>
 <a href="index.html">Back</a>
