--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <p> hi but from dleovl</p>
+<meta name="google-site-verification" content="RJj-yth6VqidAtxXqn1hhmTuBj57KroqTeG8W-xHkQE" />
 
 
 
