--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<p>hi</p>
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +10,10 @@
     </style>
     <link rel="icon" type="image/x-icon" href="/img/favicon-removebg-preview.png">
 <title>Eggcat: Home</title>
-<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <p> hi but from dleovl</p>
-<meta name="google-site-verification" content="RJj-yth6VqidAtxXqn1hhmTuBj57KroqTeG8W-xHkQE" />
 
 
 
@@ -27,7 +26,7 @@
     <p>hello</p>
 
     <a href="jokeoftheday.html" class="button">Joke of the day</a>
-<button href="jokeoftheday.html">Joke of the day</button>
+<button type="button" href="jokeoftheday.html">Joke of the day</button>
 
 
 </body>
