--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <style>
         body {
-    background-image: url("/img/Untitled.png");
+    background-image: url("img/Untitled.png");
    }
     </style>
     <link rel="icon" type="image/x-icon" href="/img/favicon-removebg-preview.png">
