--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <style>
         body {
-    background-image: url("img/Untitled.png");
+    background-image: url(".img/Untitled.png");
    }
     </style>
-    <link rel="icon" type="image/x-icon" href="img/favicon-removebg-preview.png">
+    <link rel="icon" type="image/x-icon" href=".img/favicon-removebg-preview.png">
 <title>Eggcat: Home</title>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href=".css/style.css">
 </head>
 <body>
 <p> hi but from dleovl</p>
