--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
-
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <style>
-        body {
-    background-image: url(".img/Untitled.png");
-   }
-    </style>
-    <link rel="icon" type="image/x-icon" href=".img/favicon-removebg-preview.png">
-<title>Eggcat: Home</title>
-<link rel="stylesheet" href=".css/style.css">
-</head>
-<body>
-<p> hi but from dleovl</p>
-
-
-
-
-
-
-
-
-
-    <p>hello</p>
-
-    <a href="jokeoftheday.html" class="button">Joke of the day</a>
-<button type="button" href="jokeoftheday.html">Joke of the day</button>
-
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <title>Eggcat: Home</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <p>hi but from dleovl</p>
+        <p>hello</p>
+        <a href="jokeoftheday.html" class="button">Joke of the day</a>
+    </body>
 </html>
