--- a/jokeoftheday.html
+++ b/jokeoftheday.html
@@ -1,4 +1,15 @@
-<p>Ever wondered how you do a space party? Yoy planet.</p>
-
-<p>#18 march 2024 @unknown: What do you call a cow with no legs? Disabled.</p>
-<a href="index.html">Back</a>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+    </head>
+    <body>
+        <p>Ever wondered how you do a space party? Yoy planet.</p>
+        <p>#18 march 2024 @unknown: What do you call a cow with no legs? Disabled.</p>
+        <a href="index.html">Back</a>
+    </body>
+</html>
