--- a/jokeoftheday.html
+++ b/jokeoftheday.html
@@ -8,8 +8,10 @@
         <link rel="manifest" href="assets/site.webmanifest">
     </head>
     <body>
-        <p>Ever wondered how you do a space party? Yoy planet.</p>
-        <p>#18 march 2024 @unknown: What do you call a cow with no legs? Disabled.</p>
+        <p>Did you hear about the guy who invented the knock-knock joke? He won the 'no-bell' prize.</p>
+        
+        <p>#19 march 2024 @12:00am: Ever wondered how you do a space party? Yoy planet.</p>
+        <p>#18 march 2024 @12:00: What do you call a cow with no legs? Disabled.</p>
         <a href="index.html">Back</a>
     </body>
 </html>
